--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 
+
 services:
   flask-app:
-    build: .
-    container_name: flask_app
-    command: python main.py
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
     env_file: .env
     volumes:
-      - ./app:/app
-
+      - .:/app
+    command: python -m app.main
